# Buguard_Asset_Management

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: quality.yml
.specify/: feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 002_multi_tenant_auth.py  003_phase7_parent_relationship.py
app/: main.py
app/api/: deps.py
app/core/: config.py  errors.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  asset.py  organization.py  refresh_token.py  user.py
app/repositories/: assets.py  auth.py  organizations.py  relationships.py  users.py
app/schemas/: analysis.py  assets.py  auth.py
app/services/: analysis.py  auth.py  cache.py  certificate_lifecycle.py  rate_limits.py  rbac.py  tenant_assets.py
scripts/: seed.py
specs/001-backend-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multi-tenant-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-asset-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_alembic.py  test_config.py  test_db_session.py  test_health.py
(+77 files in other folders)
